Document :skip-empty in .split

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -5,7 +5,7 @@
 =SUBTITLE Value that can be treated as a string or number interchangeably
 
     class Cool is Any { }
-
+sp
 C<Cool>, also known as the B<C>onvenient B<OO> B<L>oop, is a base class
 for strings, numbers and other built-in classes that you are supposed to use
 mostly interchangeably.
@@ -1034,17 +1034,17 @@ This is the list-input version of L<chr>. The inverse operation is L<ords>.
 
 Defined as:
 
-    multi sub    split(  Str:D $delimiter, Str(Cool) $input, $limit = Inf, :$k, :$v, :$kv, :$p)
-    multi sub    split(Regex:D $delimiter, Str(Cool) $input, $limit = Inf, :$k, :$v, :$kv, :$p)
-    multi method split(  Str:D $delimiter, $limit = Inf, :$k, :$v, :$kv, :$p)
-    multi method split(Regex:D $delimiter, $limit = Inf, :$k, :$v, :$kv, :$p)
+    multi sub    split(  Str:D $delimiter, Str(Cool) $input, $limit = Inf, :$k, :$v, :$kv, :$p, :$skip-empty)
+    multi sub    split(Regex:D $delimiter, Str(Cool) $input, $limit = Inf, :$k, :$v, :$kv, :$p, :$skip-empty)
+    multi method split(  Str:D $delimiter, $limit = Inf, :$k, :$v, :$kv, :$p, :$skip-empty)
+    multi method split(Regex:D $delimiter, $limit = Inf, :$k, :$v, :$kv, :$p, :$skip-empty)
 
 Usage:
 
-    split DELIMITER, STRING, LIMIT?, [:k | :v | :kv | :p]?
-    split /PATTERN/, STRING, LIMIT?, [:k | :v | :kv | :p]?
-    STRING.split(DELIMITER, LIMIT?,  [:k | :v | :kv | :p]?)
-    STRING.split(/PATTERN/, LIMIT?,  [:k | :v | :kv | :p]?)
+    split DELIMITER, STRING, LIMIT?, [:k | :v | :kv | :p]?, :skip-empty?
+    split /PATTERN/, STRING, LIMIT?, [:k | :v | :kv | :p]?, :skip-empty?
+    STRING.split(DELIMITER, LIMIT?,  [:k | :v | :kv | :p]?, :skip-empty?)
+    STRING.split(/PATTERN/, LIMIT?,  [:k | :v | :kv | :p]?, :skip-empty?)
 
 Coerces the invocant (or in the sub form, the second argument) to
 L<Str|/type/Str>, and splits it into pieces based on delimiters found in the
@@ -1083,8 +1083,12 @@ and C<:p> adds them as L<Pairs|/type/Pair>:
     say 'abc'.split(/b/, :p)                # (a 0 => ｢b｣ c)
 
 Note that unlike in Perl 5, empty chunks are not removed from the result list.
-If you want that behavior, consider using L<comb> instead.
+For that behavior, use the `:skip-empty` named argument:
 
+    say ("f,,b,c,d".split: /","/             ).perl  # ("f", "", "b", "c", "d")
+    say ("f,,b,c,d".split: /","/, :skip-empty).perl  # ("f", "b", "c", "d")
+
+See also: L<comb>.
 
 =head2 routine lines
 
