Added index terms for doc/Langualge/setbagmix.pod

--- a/Language/setbagmix.pod
+++ b/Language/setbagmix.pod
@@ -98,17 +98,23 @@ only C<Set> arguments.
     multi sub infix:<(elem)>($a, Any $b --> Bool)
     multi sub infix:<(elem)>($a, Set $b --> Bool)
 
+X<Membership operator>.
+
 Returns C<True> if C<$a> is an B<element> of C<$b>.
 
 =head4 infix ∈
 
     only sub infix:<<"∈">>($a, $b --> Bool)
 
+X<Membership operator> (alternate).
+
 Equivalent to L«(elem)», at codepoint U+2208 (ELEMENT OF).
 
 =head4 infix ∉
 
     only sub infix:<<"∉">>($a, $b --> Bool)
+
+X<Non-membership operator>.
 
 Equivalent to C<!(elem)>, i.e., returns C<True> if C<$a> is not an element
 of C<$b>, at codepoint U+2209 (NOT AN ELEMENT OF).
@@ -118,17 +124,23 @@ of C<$b>, at codepoint U+2209 (NOT AN ELEMENT OF).
     multi sub infix:<(cont)>(Any $a, $b --> Bool)
     multi sub infix:<(cont)>(Set $a, $b --> Bool)
 
+X<Contains operator>.
+
 Returns C<True> if C<$a> B<contains> C<$b> as an element.
 
 =head4 infix ∋
 
     only sub infix:<<"∋">>($a, $b --> Bool)
 
+X<Contains operator> (alternate).
+
 Equivalent to L«(cont)», at codepoint U+220B (CONTAINS AS MEMBER).
 
 =head4 infix ∌
 
     only sub infix:<<"∌">>($a, $b --> Bool)
+
+X<Does not contain operator>.
 
 Equivalent to C<!(cont)>, i.e., returns C<True> if C<$a> does not contain
 C<$b>, at codepoint U+220C (DOES NOT CONTAIN AS MEMBER).
@@ -138,6 +150,8 @@ C<$b>, at codepoint U+220C (DOES NOT CONTAIN AS MEMBER).
     multi sub infix:<<(<=)>>(Any $a, Any $b --> Bool)
     multi sub infix:<<(<=)>>(Setty $a, Setty $b --> Bool)
 
+X<Subset of or equal to operator>.
+
 Returns C<True> if C<$a> is a B<subset> or is equal to C<$b>, i.e., if all
 the elements of C<$a> are elements of C<$b> and C<$a> is a smaller or equal
 sized set than C<$b>.
@@ -146,11 +160,15 @@ sized set than C<$b>.
 
     only sub infix:<<"⊆">>($a, $b --> Bool)
 
+X<Subset of or equal to operator> (alternate).
+
 Equivalent to L«(<=)», at codepoint U+2286 (SUBSET OF OR EQUAL TO).
 
 =head4 infix ⊈
 
     only sub infix:<<"⊈">>($a, $b --> Bool)
+
+X<Neither subset of nor equal to operator>.
 
 Equivalent to C«!(<=)», at codepoint U+2288 (NEITHER A SUBSET OF NOR EQUAL TO).
 
@@ -158,6 +176,8 @@ Equivalent to C«!(<=)», at codepoint U+2288 (NEITHER A SUBSET OF NOR EQUAL TO)
 
     multi sub infix:<<(<)>>(Any $a, Any $b --> Bool)
     multi sub infix:<<(<)>>(Setty $a, Setty $b --> Bool)
+
+X<Subset of operator>.
 
 Returns C<True> if C<$a> is a B<strict subset> of C<$b>, i.e., that all the
 elements of C<$a> are elements of C<$b> but C<$a> is a smaller set than
@@ -167,11 +187,15 @@ C<$b>.
 
     only sub infix:<<"⊂">>($a, $b --> Bool)
 
+X<Subset of operator> (alternate).
+
 Equivalent to L«(<)», at codepoint U+2282 (SUBSET OF).
 
 =head4 infix ⊄
 
     only sub infix:<<"⊄">>($a, $b --> Bool)
+
+X<Not a subset of operator>.
 
 Equivalent to C«!(<)», at codepoint U+2284 (NOT A SUBSET OF).
 
@@ -180,6 +204,8 @@ Equivalent to C«!(<)», at codepoint U+2284 (NOT A SUBSET OF).
     multi sub infix:<<(>=)>>(Any $a, Any $b --> Bool)
     multi sub infix:<<(>=)>>(Setty $a, Setty $b --> Bool)
 
+X<Superset of or equal to operator>.
+
 Like L«(<=)» with reversed arguments. Returns C<True> if C<$a> is a
 B<superset> of or equal to C<$b>.
 
@@ -187,11 +213,15 @@ B<superset> of or equal to C<$b>.
 
     only sub infix:<<"⊇">>($a, $b --> Bool)
 
+X<Superset of or equal to operator> (alternate).
+
 Equivalent to L«(>=)», at codepoint U+2287 (SUPERSET OF OR EQUAL TO).
 
 =head4 infix ⊉
 
     only sub infix:<<"⊉">>($a, $b --> Bool)
+
+X<Neither a superset of nor equal to operator>.
 
 Equivalent to C«!(>=)», at codepoint U+2289 (NEITHER A SUPERSET OF
 NOR EQUAL TO).
@@ -201,6 +231,8 @@ NOR EQUAL TO).
     multi sub infix:<<(>)>>(Any $a, Any $b --> Bool)
     multi sub infix:<<(>)>>(Setty $a, Setty $b --> Bool)
 
+X<Superset of operator>.
+
 Like L«(<)» with reversed arguments. Returns C<True> if C<$a> is a
 B<strict superset> of C<$b>.
 
@@ -208,11 +240,15 @@ B<strict superset> of C<$b>.
 
     only sub infix:<<"⊃">>($a, $b --> Bool)
 
+X<Superset of operator> (alternate).
+
 Equivalent to L«(>)», at codepoint U+2283 (SUPERSET OF).
 
 =head4 infix ⊅
 
     only sub infix:<<"⊅">>($a, $b --> Bool)
+
+X<Not a superset of operator>.
 
 Equivalent to C«!(>)», at codepoint U+2285 (NOT A SUPERSET OF).
 
@@ -220,6 +256,8 @@ Equivalent to C«!(>)», at codepoint U+2285 (NOT A SUPERSET OF).
 
     multi sub infix:<<(<+)>>(Any $a, Any $b --> Bool)
     multi sub infix:<<(<+)>>(Baggy $a, Baggy $b --> Bool)
+
+X<Baggy subset of operator>.
 
 Returns C<True> if C<$a> is a Baggy B<subset> of C<$b>, i.e., if all the
 elements of C<$a> are in C<$b> and each element of C<$b> is weighed at
@@ -229,12 +267,16 @@ least as heavily as the element is in C<$a>.
 
     only sub infix:<<"≼">>($a, $b --> Bool)
 
+X<Baggy subset of operator> (alternate).
+
 Equivalent to L«(<+)», at codepoint U+227C (PRECEDES OR EQUAL TO).
 
 =head3 infix (>+)
 
     multi sub infix:<<(>+)>>(Baggy $a, Baggy $b --> Bool)
     multi sub infix:<<(>+)>>(Any $a, Any $b --> Bool)
+
+X<Baggy superset of operator>.
 
 Returns C<True> if C<$a> is a Baggy B<superset> of C<$b>, i.e., if all the
 elements of C<$b> are in C<$a> and no element of C<$b> is weighted heavier
@@ -244,6 +286,8 @@ than that element is in C<$a>.
 
     only sub infix:<<"≽">>($a, $b --> Bool)
 
+X<Baggy superset of operator> (alternate).
+
 Equivalent to L«(+>)», at codepoint U+227D (SUCCEEDS OR EQUAL TO).
 
 =head2 Operators that return C<Set> or C<Bag>
@@ -251,6 +295,9 @@ Equivalent to L«(+>)», at codepoint U+227D (SUCCEEDS OR EQUAL TO).
 =head3 infix (|)
 
     only sub infix:<(|)>(**@p)
+
+
+X<Union operator>.
 
 Returns the B<union> of all its arguments. Generally, this creates a new
 C<Set> that contains all the elements its arguments contain.
@@ -267,11 +314,15 @@ appeared for that element.
 
     only sub infix:<<"∪">>(|p)
 
+X<Union operator> (alternate).
+
 Equivalent to L«(V<|>)», at codepoint U+222A (UNION).
 
 =head3 infix (&)
 
     only sub infix:<(&)>(**@p)
+
+X<Intersection operator>.
 
 Returns the B<intersection> of all of its arguments. Generally, this creates
 a new C<Set> that contains only the elements common to all of the arguments.
@@ -289,11 +340,16 @@ is the minimum of the weights of that element over all arguments).
 
     only sub infix:<<"∩">>(|p)
 
+X<Intersection operator> (alternate).
+
 Equivalent to L«(&)», at codepoint U+2229 (INTERSECTION).
 
 =head3 infix (-)
 
     only sub infix:<(-)>(**@p)
+
+
+X<Set difference operator>.
 
 Returns the B<set difference> of all its arguments. Generally, this returns
 the C<Set> made up of all the elements the first argument has but the rest
@@ -311,12 +367,17 @@ that element in each of the other arguments.
 
     only sub infix:<<"\x2216">>(|p)
 
+X<Set difference operator> (alternate).
+
 Equivalent to L«(-)».
 
 =head3 infix (^)
 
     multi sub infix:<(^)>(Any $a, Any $b --> Setty)
     multi sub infix:<(^)>(Set $a, Set $b --> Setty)
+
+
+X<Symmetric set difference operator>.
 
 Returns the B<symmetric set difference> of all its arguments, i.e., a C<Set>
 made up of all the elements that C<$a> has but C<$b> doesn't and all the
@@ -327,11 +388,15 @@ $a)>.
 
     only sub infix:<<"⊖">>($a, $b --> Setty)
 
+X<Symmetric set difference operator> (alternate).
+
 Equivalent to L«(^)», at codepoint U+2296 (CIRCLED MINUS).
 
 =head3 infix (.)
 
     only sub infix:<(.)>(**@p)
+
+X<Baggy multiplication operator>.
 
 Returns the Baggy B<multiplication> of its arguments, i.e., a C<Bag> that
 contains each element of the arguments with the weights of the element
@@ -344,11 +409,15 @@ across the arguments multiplied together to get the new weight.
 
     only sub infix:<<"⊍">>(|p)
 
+X<Baggy multiplication operator> (alternate).
+
 Equivalent to L«(.)», at codepoint U+228D (MULTISET MULTIPLICATION).
 
 =head3 infix (+)
 
     only sub infix:<(+)>(**@p)
+
+X<Baggy addition operator>.
 
 Returns the Baggy B<addition> of its arguments, i.e., a C<Bag> that contains
 each element of the arguments with the weights of the element across the
@@ -361,10 +430,12 @@ arguments added together to get the new weight.
 
     only sub infix:<<"⊎">>(|p)
 
+X<Baggy addition operator> (alternate).
+
 Equivalent to L«(+)», at codepoint U+228E (MULTISET UNION).
 
 =head3 term ∅
 
-Equivalent to set(), aka the empty set, at codepoint U+2205 (EMPTY SET).
+Equivalent to set(), aka X<the empty set>, at codepoint U+2205 (EMPTY SET).
 
 =end pod
