fix trans for Pairs and list of Pairs

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -691,17 +691,20 @@ Example:
     multi method trans(Str:D: Pair:D \what, *%n) returns Str
     multi method trans(Str:D: *@changes, :complement(:$c), :squash(:$s), :delete(:$d)) returns Str
 
-Replaces one or many substrings with one or many strings. Ranges are supported, both for keys and
-values. Regexes work as keys. When called with C<:complement> anything but the matched value or range
-is replaced with a single value. With C<:delete> the matched characters are removed.
-Combining C<:complement> and C<:delete> will remove anything but the matched values.
-The adverb C<:squash> will reduce repeated matched characters to a single character. 
+Replaces one or many characters with one or many characters. Ranges are
+supported, both for keys and values. Regexes work as keys. In case a list of
+keys and values is used, substrings can be replaced aswell. When called with
+C<:complement> anything but the matched value or range is replaced with a
+single value. With C<:delete> the matched characters are removed.  Combining
+C<:complement> and C<:delete> will remove anything but the matched values.  The
+adverb C<:squash> will reduce repeated matched characters to a single
+character. 
 
 Example:
 
     my $str = 'say $x<b> && $y<a>';
-    $str.=trans( '<' => '&lt;' );
-    $str.=trans( '<' => '&lt;', '>' => '&gt;' );
+    $str.=trans( '<' => '«' );
+    $str.=trans( '<' => '«', '>' => '»' );
     
     $str.=trans( [ '<'   , '>'   , '&' ] =>
                  [ '&lt;', '&gt;', '&amp;' ]);
