Add index entries for postfix and prefix call

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -536,6 +536,7 @@ method call.
     1.i # No such method 'i' for invocant of type 'Int'
 
 Technically this is not an operator, but syntax special-cased in the compiler.
+X<|postfix call>
 
 =head2 postfix C«.:<prefix>»
 
@@ -546,6 +547,7 @@ A prefix can be called like a method using colonpair notation. For example:
     say $a.:<++>; # 3
 
 Technically this is not an operator, but syntax special-cased in the compiler.
+X<|prefix call>
 
 =head2 postfix C«.::»
 
