Typos and fix a link

--- a/Language/list.pod
+++ b/Language/list.pod
@@ -16,8 +16,8 @@ Literal L<C<List>s|/type/List> are created with commas B<not> with
 parentheses, so:
 
     1,2         # This is two-element list
-    (1,2)       # This is also a list, in parenthesis
-    (1)         # This is not a list, just a 1 in parenthesis
+    (1,2)       # This is also a list, in parentheses
+    (1)         # This is not a list, just a 1 in parentheses
     (1,)        # This is a one-element list
 
 Parentheses can be used to mark the beginning and end of a list, so:
@@ -158,7 +158,7 @@ to put an infinite list, lest your program hang and, eventually, run out of memo
 
 When you have a list that contains sub-lists, but you only want one flat list,
 you may flatten the list to produce a sequence of values as if all parentheses
-were removed. This works no matter how many levels deep the parenthesis are nested.
+were removed. This works no matter how many levels deep the parentheses are nested.
 
     say (1,(2,(3,4)),5).flat eqv (1,2,3,4,5) # says True
 
@@ -184,7 +184,7 @@ syntax rules are at play: the list is immediately converted into a
 C<Capture>.  A C<Capture> itself has a List (C<.list>) and a Hash (C<.hash>).
 Any C<Pair> literals whose keys are not quoted, or which are not parenthesized,
 never make it into C<.list>.  Instead, they are considered to be named
-arguments and squashed into C<.hash>.  See the L<page on C<Capture>|/types/Capture>
+arguments and squashed into C<.hash>.  See the L<page on C<Capture>|/type/Capture>
 for the details of this processing.
 
 Consider the following ways to make a new C<Array> from a C<List>.  These ways
@@ -335,7 +335,7 @@ does not put C<$> to explicitly show scalars, unlike List.perl:
     [(1,2),$(3,4)].perl.say; # says "[(1, 2), (3, 4)]"
                              # ...but actually means: "[$(1,2), $(3,4)]"
 
-It was decided all those extra dollar signs and parenthesis were more of an
+It was decided all those extra dollar signs and parentheses were more of an
 eye sore than a benefit to the user.  Basically, when you see a square bracket,
 remember the invisible dollar signs.
 
