show that Block got a return value

--- a/Type/Block.pod
+++ b/Type/Block.pod
@@ -38,6 +38,10 @@ transparent to L<return>.
                        #   ^^^^^^   exits &f, not just the block
     }
 
+The last statement is the implicit return value of the block.
+
+    say {1}.(); # OUTPUT«1␤»
+
 Bare blocks in sink context are automatically executed:
 
     say 1;
