doc Range as List/Array slice

--- a/Language/list.pod
+++ b/Language/list.pod
@@ -237,6 +237,20 @@ structure in the result:
 
     say ("a","b","c")[(1,2),(0,1)] eqv (("b", "c"), ("a", "b")) # says True
 
+=head2 Range as Slice
+
+A L<C<Range>|/type/Range> is a container for a lower and a upper boundary.
+Generating a slice with a C<Range> will include any index between those bounds,
+including the bounds. For infinite upper bounderies we agree with
+mathematicians that C<Inf> equals C<Inf-1>.
+
+    my @a = 1..5;
+    say @a[0..2]; # OUTPUT«(1 2 3)␤»
+    say @a[0..^2]; # OUTPUT«(1 2)␤»
+    say @a[0..*];  # OUTPUT«(1 2 3 4 5)␤␤»
+    say @a[0..^*]; # OUTPUT«(1 2 3 4 5)␤» 
+    say @a[0..Inf-1]; # OUTPUT«(1 2 3 4 5)␤»
+
 =head2 Array Constructor Context
 
 Inside an Array Literal, the list of initialization values is not in capture
