--- a/Language/list.pod
+++ b/Language/list.pod
@@ -51,6 +51,17 @@ value must support the L<Positional|/type/Positional> role which guarantees this
 
     my @a := 1; # Type check failed in binding; expected Positional but got Int
 
+=head1 Reset a List Container
+
+To remove all elements from a Positional container assign
+L<C<Empty>|/type/Slip#Empty>, the empty list C<()> or a C<Slip> of the empty
+list to the container.
+
+    my @a = 1,2,3;
+    @a = ();
+    @a = Empty;
+    @a = |();
+
 =head1 Iteration
 
 All lists may be iterated, which means taking each element from the
