s/than must/that must/

--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -373,7 +373,7 @@ or a Whatever operator for an infinite range with a non inclusive minimum:
 =head2 X<Modified quantifier: %|regex,%;regex,%%>
 
 To more easily match things like comma separated values, you can tack on a
-C<%> modifier to any of the above quantifiers to specify a separator than must
+C<%> modifier to any of the above quantifiers to specify a separator that must
 occur between each of the matches.  So, for example C<a+ % ','> will match
 C<a> or C<a,a> or C<a,a,a> or so on, but it will not match C<a,> or C<a,a,>.
 To match those as well, you may use C<%%> instead of C<%>.
