Document .^compose (at least for classes). Closes #360

--- a/Language/mop.pod
+++ b/Language/mop.pod
@@ -127,6 +127,10 @@ the functionality that a type can hold roles and
 L<Metamodel::ClassHOW|/type/Metamodel::ClassHOW>, which is the meta class
 behind the C<class> keyword, does this role.
 
+Most meta classes have a C<compose> method that you must call when you're
+done creating or modifying a meta object. It creates method caches, validates
+things and so on, and weird behavior ensues if you forget to call it, so don't :-).
+
 =head2 Bootstrapping concerns
 
 You might wonder how C<Metamodel::ClassHOW> can be a class, when being a
