Document Str.NFD and friends.
Closes #365

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -762,6 +762,34 @@ Remove the whitespace characters from the end of a string. See also L<trim>.
 
 Remove the whitespace characters from the beginning of a string. See also L<trim>.
 
+=head2 method NFC
+
+    method NFC(Str:D:) returns NFC:D
+
+Returns a codepoint string in L<NFC|/type/NFC> format (Unicode Normalization
+Form C / Composed).
+
+=head2 method NFD
+
+    method NFD(Str:D:) returns NFD:D
+
+Returns a codepoint string in L<NFC|/type/NFD> format (Unicode Normalization
+Form D / Decomposed).
+
+=head2 method NFKC
+
+    method NFKC(Str:D:) returns NFKC:D
+
+Returns a codepoint string in L<NFKC|/type/NFKC> format (Unicode Normalization
+Form KC / Compatibility Composed).
+
+=head2 method NFKD
+
+    method NFKD(Str:D:) returns NFKD:D
+
+Returns a codepoint string in L<NFC|/type/NFKD> format (Unicode Normalization
+Form KD / Compatibility Decomposed).
+
 =head2 method ACCEPTS
 
     multi method ACCEPTS(Str:D: $other)
