The FAQ answer for "Is there going to be a Perl 6 version 6.0.0?" is much simpler now

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -15,40 +15,11 @@ be used loosely and interchangeably.
 
 =head2 Is there going to be a Perl 6 version 6.0.0?
 
-"Perl 6" is a language, not an implementation of that language.  Think of
-"Perl 6" as being like "C", "C++", "Javascript", etc., where the language is
-separate from the (many) implementations of that language.
+The version of the first stable language version is called v6.c, not 6.0.0.
+The different naming scheme makes it unlikely that there'll ever be a release
+of the langauge with the exact version 6.0.0.
 
-There are two key points to make:
-
-1.  Language specification should follow implementations, not precede them.
-This has been found to be true for many programming languages, and it's the
-way things work in the Internet RFC/STD process.  An update to a language
-spec recognizes and ratifies the features that have been largely agreed upon
-by implementations and users, as opposed to prescribing what the next version
-of the language ought to look like.  First is rough consensus, then running
-code, and *then* formalization into a specification.
-
-So, if language specification follows implementation, it's not possible for
-Rakudo or other implementations to use language version numbers as their
-primary versioning scheme.  To take an example from the C language:  a
-recent gcc compiler may say it's version 5.2.1, but there's not a version
-"5.2.1" of the C Programming Language.  Similarly, one doesn't speak of the
-"C89", "C99", or "C11" release of GCC.
-
-2.  It doesn't make a lot of sense to think of major/minor version numbers
-such as 6.x.y when discussing a language specification.  Compiler releases
-happen often, incorporating new features, bug fixes, and small incremental
-changes.  Language specification changes tend to happen on longer timescales
--- there's not really a notion of a "minor release" on such timescales.  So,
-the language specifications are being versioned as "6.a", "6.b", "6.c", etc.,
-instead of a scheme incorporating minor version increments.
-
-This separation of language specification and implementation can be unnerving
-to those that are so used to Perl 5's tight coupling of the two, including
-using a common "version number" for both.  But that tight coupling is partly
-what led to several of Perl 5's evolutionary dead ends and roadblocks, and
-we're trying to avoid repeating that mistake with Perl 6.
+It is implemented by the Rakudo Perl 6 compiler version 2015.12 and 2016.01.
 
 =head2 As a Perl 6 beginner what should I install?
 
