fix typo and tweak 6.0.0 answer

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -17,9 +17,11 @@ be used loosely and interchangeably.
 
 The version of the first stable language version is called v6.c, not 6.0.0.
 The different naming scheme makes it unlikely that there'll ever be a release
-of the langauge with the exact version 6.0.0.
+of the language with the exact version 6.0.0.
 
-It is implemented by the Rakudo Perl 6 compiler version 2015.12 and 2016.01.
+It was first implemented by the Rakudo Perl 6 compiler version 2015.12 and is
+likely to be supported by subsequent releases for the foreseeable future by use
+of the 'use 6.c' pragma..
 
 =head2 As a Perl 6 beginner what should I install?
 
