Degarble description of .w method

--- a/Type/Proc/Async.pod
+++ b/Type/Proc/Async.pod
@@ -108,9 +108,9 @@ you try.
 
     method w(Proc::Async:D:)
 
-Returns a true value if C<:w> as passed to the constructor, that is, if the
-external program is started with its input stream made available to input from
-the program through C<print>, C<say> and C<write>.
+Returns a true value if C<:w> was passed to the constructor, that is, if the
+external program is started with its input stream made available to output to
+the program through the C<.print>, C<.say> and C<.write> methods.
 
 =head2 method start
 
