Missed =end pod

--- a/Language/performance.pod
+++ b/Language/performance.pod
@@ -174,3 +174,5 @@ L<data granularity|https://en.wikipedia.org/wiki/Granularity#Data_granularity>,
 L<locality of reference|https://en.wikipedia.org/wiki/Locality_of_reference> to name a few.
 If you think some topic needs more coverage on this page please submit a PR or tell someone your idea.
 Thanks. :)
+
+=end pod
