Shorten subtitle and other style tweaks

--- a/Language/performance.pod
+++ b/Language/performance.pod
@@ -2,7 +2,7 @@
 
 =TITLE Performance
 
-=SUBTITLE Measuring and improving speed and ram usage at run-time or compile-time
+=SUBTITLE Measuring and improving run-time or compile-time performance
 
 B<Make sure you're not wasting time on the wrong code>: start by identifying your
 L<"critical 3%"|https://en.wikiquote.org/wiki/Donald_Knuth> by profiling your code (explained on this page).
@@ -10,7 +10,7 @@ L<"critical 3%"|https://en.wikiquote.org/wiki/Donald_Knuth> by profiling your co
 If you decide to talk about a performance problem, please first prepare a one-liner and/or public gist
 that illustrates the problem.
 Also, let folk know if you are using Perl 6 in your $dayjob or exploring it for fun
-and think about what the minimum speed increase (or ram reduction or whatever) you want/need.
+and think about what the minimum speed increase (or ram reduction or whatever) you want/need would be.
 What if it took a month for folk to help you achieve that? A year?
 
 =head1 Identifying the problem
@@ -37,9 +37,11 @@ The evalbot's output includes a link to L<profile info|https://en.wikipedia.org/
 
     yournick prof-m: say 'hello world' 
     camelia  prof-m 273e89: OUTPUT«hello world␤...» 
-             .. Prof: http://p.p6c.org/20f9e25
+             .. Prof: L<http://p.p6c.org/20f9e25>
 
-To learn how to interpret the profile info, ask questions on channel.
+Click on the profile info link to see a profile for C<say 'hello world'>.
+
+To learn how to interpret profile info, ask questions on channel.
 
 =head2 Profiling locally
 
@@ -62,7 +64,7 @@ then results for each are visually overlaid on the same graphs to provide for qu
 
 =head1 Improving code 
 
-This bears repeating: B<make sure you're not wasting time on the wrong code>: start by identifying your
+This bears repeating: B<make sure you're not wasting time on the wrong code>. Start by identifying your
 L<"critical 3%"|https://en.wikiquote.org/wiki/Donald_Knuth> via profiling, as discussed in several sections above.
 
 =head2 Line by line
@@ -116,7 +118,7 @@ and/or L<the matching video|https://www.youtube.com/watch?v=JpqnNCx7wVY&list=PLR
 
 =head2 Using native types
 
-You can make some code run faster and/or use less ram by adding native types to your code:
+You may be able to make some code run faster and/or use less ram by adding native types to your code:
 
 XXX Start of section to be written
 
