--- a/Type/Map.pod
+++ b/Type/Map.pod
@@ -6,10 +6,10 @@
 
     class Map does Associative is Iterable { }
 
-An Map is an immutable mapping from string keys to values of arbitrary
+A Map is an immutable mapping from string keys to values of arbitrary
 types. It serves as a base class for L<Hash>, which is mutable.
 
-In list context an Map behaves as a list of L<Pair> objects.
+In list context a Map behaves as a list of L<Pair> objects.
 
 Note that the order in which keys, values and pairs are retrieved is
 generally arbitrary, but the C<keys>, C<values> and C<pairs> methods
@@ -81,7 +81,7 @@ operator:
 
     my $value = $map{$key};
 
-To check whether a given key is stored in an Map, modify the access
+To check whether a given key is stored in a Map, modify the access
 with the C<:exists> adverb:
 
     if %h{$key}:exists {
