Fix example grammar to allow leading spaces so that it parses the example text

--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -1363,7 +1363,7 @@ L<grammars|/language/grammars>:
 
     grammar IniFormat {
         token ws { <!ww> \h* }
-        rule header { '[' (\w+) ']' \n+ }
+        rule header { \s* '[' (\w+) ']' \n+ }
         token identifier  { \w+ }
         rule kvpair { \s* <key=identifier> '=' <value=identifier> \n+ }
         token section {
